# iitp_6_python

./: .coverage  .flake8  .python-version  README.md  mypy.ini  noxfile.py  pyproject.toml
docs/: conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
src/iitp_6_python/: __init__.py  console.py  hough_lines.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
